[package]
name = "blockchain-demo"
version = "0.1.0"
authors = ["yunwei37 <1067852565@qq.com>"]
description = "A simplified blockchain implementation in rust for leaning"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/yunwei37/blockchain-rust"
repository = "https://github.com/yunwei37/blockchain-rust"
license = "MIT"
keywords = ["blockchain", "demo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bincode = "2.0.0-rc.3"
bitcoincash-addr = "0.5.2"
clap = { version = "4.5.4", features = ["derive"] }
ed25519-dalek = "2.1.1"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
merkle-cbt = "0.3.1"
rand = "0.8.5"
ripemd = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.59"
